PMD code check Fix